--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Napas Keeratiworanan
 #logo: /assets/img/headshot_circle.png
-description: text below image
+description: 
 #show_downloads: true
 theme: jekyll-theme-minimal
